--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <br>
     <h4><font color="yellow">Ruart</font></h4>
     <br>
+    <a href = "https://ruartranosa.github.io/">
+    <img src = "cemetery.jpeg">
+    </a>
   </body>
 </html>
